retriving trust data of selected drop down

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -1,11 +1,9 @@
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'NHSD_POC/CSS/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'NHSD_POC/CSS/trust_performance.css' %}">
 <script src="{% static 'NHSD_POC/trust_performance.js' %}">
 </script>
 
-<select name="trust" onchange="get_trust(this)">
-    <option value="">Select</option>
-    <option value="RR8">RR8</option>
-    <option value="RR1">RR1</option>
+<select name="trust" id="trust_list" onchange="get_performance_data_for_map(this.value)">
+    <option value="">Select Trust</option>
 </select>
