fixed review comments

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -4,6 +4,6 @@
 <script src="{% static 'NHSD_POC/trust_performance.js' %}">
 </script>
 
-<select name="trust" id="trust_list" onchange="get_performance_data_for_map(this.value)">
+<select id="trust_list" onchange="get_performance_data_for_map(this.value)">
     <option value="">Select Trust</option>
 </select>
