--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -63,9 +63,7 @@
                 </a>
 
                 <div id="myhscic">
-
-                    Hello User </div>
-
+                    Hello Admin... </div>
                 <div class="navbar-title">
                     <h1>Cancer Waiting Times</h1>
                     <div class="notification-message "> </div>
@@ -107,22 +105,22 @@
 
         <div class="container">
             <ul class="nav navbar-nav hscic-nav">
-                
-                <li>
-                    <select class="form-control" id="trust_list">
+
+                <li style="float: right">
+                    <select class="form-control" id="trust_list" onchange="get_performance_data_for_map(this.value)">
                         <option value="">Select</option>
                     </select>
+                    <input type="hidden" id="current_selected_graph">
                 </li>
-                <li class="active"><a href="">Performance visualization</a></li>
+                <li class="active" style="text-align: center;float: unset;border-left: none;"><a href="">Performance visualization</a></li>
             </ul>
         </div>
-
         <div class="container">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="HomePageMenuList">
-                                <div id="chart_div" style="width: 100%; height: 700px; "></div>
+                            <div id="chart_div" style="width: 100%; height: 700px; "></div>
                         </div>
                     </div>
                     <div class="col-sm-3" style="
@@ -136,25 +134,25 @@
                         </div>
                         <div
                             style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding: 5px;text-align: center;">
-                            <a style="cursor: pointer" onclick="loadchart(dummychartdata.TvP)">
+                            <a style="cursor: pointer" onclick="loadchart(grapType.TvP)">
                                 <img src="{% static 'NHSD_POC/images/regions.png' %}" style="width: 100%">
                                 <span style="display: block">Trust vs Peers</span>
                             </a>
                         </div>
                         <div
                             style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding:  5px;text-align: center;">
-                            <a style="cursor: pointer" onclick="loadchart(dummychartdata.TvR )">
-                           
-                            <img src="{% static 'NHSD_POC/images/trustvsregion.png' %}" style="width: 100%">
-                            <span style="display: block">Trust vs Region </span>
-                        </a>
+                            <a style="cursor: pointer" onclick="loadchart(grapType.TvR )">
+
+                                <img src="{% static 'NHSD_POC/images/trustvsregion.png' %}" style="width: 100%">
+                                <span style="display: block">Trust vs Region </span>
+                            </a>
                         </div>
                         <div style="margin: 7px 0px 0px 0px;padding:  5px;text-align: center;">
-                                <a style="cursor: pointer" onclick="loadchart(dummychartdata.Regions)">
-                            
-                            <img src="{% static 'NHSD_POC/images/trustwise.png' %}" style="width: 100%">
-                            <span style="display: block">Regions</span>
-                        </a>
+                            <a style="cursor: pointer" onclick="loadchart(grapType.Regions)">
+
+                                <img src="{% static 'NHSD_POC/images/trustwise.png' %}" style="width: 100%">
+                                <span style="display: block">Regions</span>
+                            </a>
                         </div>
                     </div>
                 </div>
