--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -105,7 +105,7 @@
 
 
         <div class="container">
-            <ul class="nav navbar-nav hscic-nav" style="padding-top:3px; padding-bottom:2px; border-bottom:0">
+            <ul class="nav navbar-nav hscic-nav" style="padding-top:3px; padding-bottom:2px; border-bottom:0;  padding-top: 5px;">
 
                 <li style="float: right; width: 19%">
                     <select class="form-control" id="trust_list" onchange="get_performance_data_for_map(this.value)">
@@ -116,7 +116,7 @@
                 <li class="active" style="text-align: center;float: unset;border-left: none;width: 81%"><h3>Performance visualization</h3></li>
             </ul>
         </div>
-        
+
         <div class="container">
             <div class="container-fluid">
                 <div class="row">
