--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -47,6 +47,7 @@
 
     <link href="{% static 'NHSD_POC/CSS/CWT/font-awesome.min.css' %}" rel="stylesheet">
     <script src="{% static 'NHSD_POC/js/CWT/modernizr.2.6.2.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"> </script>
     <script src="{% static 'NHSD_POC/js/trust_performance.js' %}"></script>
 
     <script>
@@ -116,12 +117,14 @@
                 style="padding-top:3px; padding-bottom:2px; border-bottom:0;  padding-top: 5px;">
 
                 <li style="float: right; width: 19%">
-                    <select class="form-control" id="trust_list" onchange="get_performance_data_for_map(this.value)">
-                        <option value="">select</option>
-                        {% for trust in trust_list %}
-                        <option value={{trust}} label={{trust}}></option>
-                        {% endfor %}
-                    </select>
+                    <input type="text" list="trust" class="form-control" id="trust_list" value=""
+                        onchange="get_performance_data_for_map(this.value)" />
+                        <datalist id="trust">
+                                <option value="">select</option>
+                                {% for trust in trust_list %}
+                                <option value={{trust}} label={{trust}}></option>
+                                {% endfor %}
+                        </datalist>
                     <input type="hidden" id="current_selected_graph">
 
                 </li>
