--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -61,14 +61,12 @@
                 <a href="" class="navbar-brand" title="Link to NHS Digital homepage">
                     <img src="{% static 'NHSD_POC/images/CWT/logo.png' %}">
                 </a>
-
                 <div id="myhscic">
-                    Hello Admin...
+                    Hello {% if request.user.is_authenticated %} {{ request.user.username }} <a href="{% url 'logout' %}">Logout</a>{% endif %} 
                 </div>
                 <div class="navbar-title">
                     <h1>Cancer Waiting Times</h1>
                     <div class="notification-message "> </div>
-
                 </div>
             </div>
         </div>
