--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -23,17 +23,45 @@
             border: 1px solid #ccc !important;
             border-radius: 0px !important;
         }
-        
+
         #loader {
             border: 16px solid #f3f3f3;
             border-radius: 50%;
             border-top: 16px solid #3498db;
             width: 120px;
             height: 120px;
-            -webkit-animation: spin 2s linear infinite; /* Safari */
+            -webkit-animation: spin 2s linear infinite;
+            /* Safari */
             animation: spin 2s linear infinite;
             display: none;
             margin-left: 42%;
+            margin-top: 130px;
+        }
+
+        #loaderc {
+            border: 16px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 16px solid #3498db;
+            width: 120px;
+            height: 120px;
+            -webkit-animation: spin 2s linear infinite;
+            /* Safari */
+            animation: spin 2s linear infinite;
+            display: none;
+            margin-left: 42%;
+            margin-top: 130px;
+        }
+
+        #loaderbg {
+            display: block;
+            background-color: black;
+            height: 99%;
+            width: 98%;
+            position: absolute;
+            z-index: 9999;
+            opacity: 0.2;
+            border-radius: 10px;
+            border: 1px solid black;
         }
     </style>
 
@@ -50,6 +78,7 @@
         }
     </script>
 </head>
+
 <body cz-shortcut-listen="true">
     <div id="wrap">
         <div class="navbar navbar-static-top">
@@ -58,14 +87,14 @@
                     <img src="{% static 'NHSD_POC/images/CWT/logo.png' %}">
                 </a>
                 <div id="myhscic">
-                        Hello {% if request.user.is_authenticated %} {{ request.user.username }} |
-                        <a href="{% url 'logout' %}">
-                                <button id="" type="button" class="btn btn-sm btn-primary">
-                                    Sign out&nbsp;<i class="fa fa-chevron-circle-right fa-2x"></i>
-                                </button>
-                        </a>
-                        {% endif %} 
-                    </div>
+                    Hello {% if request.user.is_authenticated %} {{ request.user.username }} |
+                    <a href="{% url 'logout' %}">
+                        <button id="" type="button" class="btn btn-sm btn-primary">
+                            Sign out&nbsp;<i class="fa fa-chevron-circle-right fa-2x"></i>
+                        </button>
+                    </a>
+                    {% endif %}
+                </div>
 
                 <div class="navbar-title">
                     <h1>Cancer Waiting Times</h1>
@@ -77,14 +106,14 @@
             <ul class="nav navbar-nav hscic-nav"
                 style="padding-top:3px; padding-bottom:2px; border-bottom:0;  padding-top: 5px;">
                 <li style="float: right; width: 19%">
-                        <input type="text" list="trust" class="form-control" id="trust_list" value=""
+                    <input type="text" list="trust" class="form-control" id="trust_list" value=""
                         onchange="get_performance_data_for_map(this.value)" />
-                        <datalist id="trust" >
-                                <option value="">select</option>
-                                {% for trust in trust_list %}
-                                <option value={{trust}} label={{trust}}></option>
-                                {% endfor %}
-                        </datalist>
+                    <datalist id="trust">
+                        <option value="">select</option>
+                        {% for trust in trust_list %}
+                        <option value={{trust}} label={{trust}}></option>
+                        {% endfor %}
+                    </datalist>
                     <input type="hidden" id="current_selected_graph">
                 </li>
                 <li class="active" style="text-align: center;float: unset;border-left: none;width: 81%">
@@ -96,8 +125,10 @@
         <div class="container">
             <div class="container-fluid">
                 <div class="row" style="height: 68vh;display: block;" id="dv_chart_no_selection_panel">
-                    <div id="loader">
+                    <div id="" style="display: none">
+                        <div id="loader" style="position: absolute;top: 0;z-index: 2;background-color: black">
 
+                        </div>
                     </div>
                     <div class="col-sm-10" id="default-img" style="display: block;">
 
@@ -107,8 +138,13 @@
                 </div>
                 <div id="dv_chart_row_panel" class="row" style="display: none">
                     <div class="col-sm-10">
+                        <div id="loaderbg">
+                            <div id="loaderc" style="display: block;position: absolute;top: 0;z-index: 2;background-color: black">
+                            </div>
+                        </div>
                         <div class="HomePageMenuList">
-                            <div id="chart_div" style="width: 100%; height: 400px;"></div>
+                            <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
+                            </div>
                         </div>
                     </div>
                     <div class="col-sm-2" style="border-left: 1px solid black;">
@@ -167,19 +203,19 @@
                 <div class="navbar-collapse collapse footer-navbar-collapse">
                     <ul class="nav navbar-nav pull-right">
                         <li>
-                                <a href="https://www.linkedin.com/company/nhs-digital">
-                                    <img src="{% static 'NHSD_POC/images/CWT/icon-twitter.png' %}"
-                                        style="width: 1em; height: 1em; margin-top: -1px;">
-                                    LinkedIn
-                                </a>
-                       </li>
-                            <li>
-                                <a href="https://www.twitter.com/NHSDigital">
-                                    <img src="{% static 'NHSD_POC/images/CWT/icon-linkedin.png' %}"
-                                        style="width: 1em; height: 1em; margin-top: -1px;">
-                                    Twitter
-                                </a>
-                            </li>
+                            <a href="https://www.linkedin.com/company/nhs-digital">
+                                <img src="{% static 'NHSD_POC/images/CWT/icon-twitter.png' %}"
+                                    style="width: 1em; height: 1em; margin-top: -1px;">
+                                LinkedIn
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.twitter.com/NHSDigital">
+                                <img src="{% static 'NHSD_POC/images/CWT/icon-linkedin.png' %}"
+                                    style="width: 1em; height: 1em; margin-top: -1px;">
+                                Twitter
+                            </a>
+                        </li>
                         <li><a href="https://digital.nhs.uk/about-nhs-digital/accessibility-help"
                                 accesskey="0">Accessibility</a></li>
                         <li><a href="https://digital.nhs.uk/about-nhs-digital/contact-us/freedom-of-information">Freedom
