--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -65,15 +65,14 @@
             <ul class="nav navbar-nav hscic-nav"
                 style="padding-top:3px; padding-bottom:2px; border-bottom:0;  padding-top: 5px;">
                 <li style="float: right; width: 19%">
-                        <input type="text" list="trust" class="form-control" id="trust_list" value=""
-                        onchange="get_performance_data_for_map(this.value)" />
-                        <datalist id="trust">
-                                <option value="">select</option>
-                                {% for trust in trust_list %}
-                                <option value={{trust}} label={{trust}}></option>
-                                {% endfor %}
-                        </datalist>
-                    <input type="hidden" id="current_selected_graph">
+                       <template id="resultstemplate">
+                                  {% for trust in trust_list %}
+                                    <option>{{trust}}</option>
+                                    {% endfor %}
+                            </template>
+                            <input type="text" name="search" id="search"  placeholder="select the region" list="searchresults" autocomplete="off" class="form-control" onchange="get_performance_data_for_map(this.value)"/>
+                            <datalist id="searchresults"></datalist>
+                        <input type="hidden" id="current_selected_graph">
                 </li>
                 <li class="active" style="text-align: center;float: unset;border-left: none;width: 81%">
                     <h3>Performance visualization</h3>
