cutmize the loader

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -34,7 +34,7 @@
             /* Safari */
             animation: spin 2s linear infinite;
             display: none;
-            margin-left: 42%;
+            margin-left: 38%;
             margin-top: 130px;
         }
 
@@ -48,7 +48,7 @@
             /* Safari */
             animation: spin 2s linear infinite;
             display: none;
-            margin-left: 42%;
+            margin-left: 38%;
             margin-top: 130px;
         }
 
@@ -105,7 +105,7 @@
         <div class="container">
             <ul class="nav navbar-nav hscic-nav"
                 style="padding-top:3px; padding-bottom:2px; border-bottom:0;  padding-top: 5px;">
-                <li style="float: right; width: 19%">
+                <li style="float: right; width: 16%">
                     <input type="text" list="trust" class="form-control" id="trust_list" value=""
                         onchange="get_performance_data_for_map(this.value)" />
                     <datalist id="trust">
@@ -124,9 +124,9 @@
 
         <div class="container">
             <div class="container-fluid">
-                <div class="row" style="height: 68vh;display: block;" id="dv_chart_no_selection_panel">
-                    <div id="" style="display: none">
-                        <div id="loader" style="position: absolute;top: 0;z-index: 2;background-color: black">
+                <div class="row" style="height: 68vh;display: block;/*background-color: #d4cece;*/" id="dv_chart_no_selection_panel">
+                    <div id="" style="display: block;">
+                        <div id="loader" style="position: absolute;top: 0;z-index: 2; margin-top:20%;">
 
                         </div>
                     </div>
