GH-79 changes for refactoring

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -237,6 +237,8 @@
     <script src="{% static 'NHSD_POC/js/CWT/jquery.validate.js' %}"></script>
     <script src="{% static 'NHSD_POC/js/CWT/bootstrap.js' %}"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{% static 'NHSD_POC/js/jsConfig.js' %}"></script>
+    <script src="{% static 'NHSD_POC/js/graph_wrapper.js' %}"></script>
     <script src="{% static 'NHSD_POC/js/trust_performance.js' %}"></script>
     <script>
         $(document).ready(function () {
