--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -155,21 +155,21 @@
                         </div>
                         <div
                             style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding: 5px;text-align: center;height: 120px;">
-                            <a style="cursor: pointer" onclick="loadchart(grapType.TvP)">
+                            <a style="cursor: pointer" onclick="showchart(grapType.TvP)">
                                 <img src="{% static 'NHSD_POC/images/regions.png' %}" style="width: 100%">
                                 <span style="display: block">Trust vs Peers</span>
                             </a>
                         </div>
                         <div
                             style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
-                            <a style="cursor: pointer" onclick="loadchart(grapType.TvR )">
+                            <a style="cursor: pointer" onclick="showchart(grapType.TvR )">
 
                                 <img src="{% static 'NHSD_POC/images/trustvsregion.png' %}" style="width: 100%">
                                 <span style="display: block">Trust vs Region </span>
                             </a>
                         </div>
                         <div style="margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
-                            <a style="cursor: pointer" onclick="loadchart(grapType.Regions)">
+                            <a style="cursor: pointer" onclick="showchart(grapType.Regions)">
 
                                 <img src="{% static 'NHSD_POC/images/trustwise.png' %}" style="width: 100%">
                                 <span style="display: block">Regions</span>
