--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -79,7 +79,7 @@
     </script>
 </head>
 
-<body cz-shortcut-listen="true">
+<body cz-shortcut-listen="true" style="overflow: hidden;">
     <div id="wrap">
         <div class="navbar navbar-static-top">
             <div class="container" style="padding-top:2px; padding-bottom:2px">
@@ -137,6 +137,12 @@
                     </div>
                 </div>
                 <div id="dv_chart_row_panel" class="row" style="display: none">
+                        <div style="margin-left:10%">
+                                <b>E1: </b>Transition 1, 
+                                 <b>E2: </b>Transition 2,
+                                 <b>E3: </b>Transition 3,
+                                <b>E4: </b>Transition 4.
+                             </div>
                     <div class="col-sm-10">
                         <div id="loaderbg">
                             <div id="loaderc" style="display: block;position: absolute;top: 0;z-index: 2;background-color: black">
