--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -78,13 +78,13 @@
        var ajax_url = "{{ api_url }}";
     </script>
 </head>
-
-<body cz-shortcut-listen="true">
+<!--style="overflow:hidden"-->
+<body cz-shortcut-listen="true" >
     <div id="wrap">
         <div class="navbar navbar-static-top">
             <div class="container" style="padding-top:2px; padding-bottom:2px">
                 <a href="" class="navbar-brand" title="Link to NHS Digital homepage">
-                    <img src="{% static 'NHSD_POC/images/CWT/logo.png' %}">
+                    <img src="{% static 'NHSD_POC/images/CWT/mastek_logo.jpg' %}">
                 </a>
                 <div id="myhscic">
                     Hello {% if request.user.is_authenticated %} {{ request.user.username }} |
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="navbar-title">
-                    <h1>Cancer Waiting Times</h1>
+                    <h1>Patient Waiting Times- <em style="font-size: 18px;">Exploratory analytics</em> </h1> 
                     <div class="notification-message "> </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
 
                 </li>
                 <li class="active" style="text-align: center;float: unset;border-left: none;width: 81%">
-                    <h3>Performance visualization</h3>
+                    <h3>Exploratory analytics </h3>
                 </li>
             </ul>
         </div>
@@ -132,11 +132,17 @@
                     </div>
                     <div class="col-sm-10" id="default-img" style="display: block;">
 
-                        <img src="{% static 'NHSD_POC/images/CWT/nhs-home-page.jpg' %}" style="width: 100%">
+                        <img src="{% static 'NHSD_POC/images/CWT/waiting_times.png' %}" style="width: 100%">
 
                     </div>
                 </div>
                 <div id="dv_chart_row_panel" class="row" style="display: none">
+                        <div style="margin-left:10%">
+                                <b>E1: </b>Transition 1, 
+                                 <b>E2: </b>Transition 2,
+                                 <b>E3: </b>Transition 3,
+                                <b>E4: </b>Transition 4.
+                             </div>
                     <div class="col-sm-10">
                         <div id="loaderbg">
                             <div id="loaderc" style="display: block;position: absolute;top: 0;z-index: 2;background-color: black">
@@ -151,14 +157,7 @@
                         <div id="side-bar-chart-option">
                             <!-- <a id="CwtReportDateLink" target="_blank" style="padding: 10px 10px 9px 10px;">
                                 <i aria-hidden="true"></i>Other Graph</a> -->
-                            <strong>Other Graph </strong>
-                        </div>
-                        <div
-                            style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding: 5px;text-align: center;height: 120px;">
-                            <a style="cursor: pointer" onclick="loadchart(grapType.TvP)">
-                                <img src="{% static 'NHSD_POC/images/regions.png' %}" style="width: 100%">
-                                <span style="display: block">Trust vs Peers</span>
-                            </a>
+                            <strong style="margin-left: 20%;">Other Graph </strong>
                         </div>
                         <div
                             style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
@@ -168,6 +167,14 @@
                                 <span style="display: block">Trust vs Region </span>
                             </a>
                         </div>
+                        <div
+                            style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding: 5px;text-align: center;height: 120px;">
+                            <a style="cursor: pointer" onclick="loadchart(grapType.TvP)">
+                                <img src="{% static 'NHSD_POC/images/regions.png' %}" style="width: 100%">
+                                <span style="display: block">Trust vs Peers</span>
+                            </a>
+                        </div>
+                        
                         <div style="margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
                             <a style="cursor: pointer" onclick="loadchart(grapType.Regions)">
 
@@ -203,31 +210,31 @@
                 <div class="navbar-collapse collapse footer-navbar-collapse">
                     <ul class="nav navbar-nav pull-right">
                         <li>
-                            <a href="https://www.linkedin.com/company/nhs-digital">
-                                <img src="{% static 'NHSD_POC/images/CWT/icon-twitter.png' %}"
+                            <a href="//www.linkedin.com/company/164825?trk=tyah&amp;trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A164825%  2Cidx%3A3-1-8%2CtarId%3A1458651117535%2Ctas%3AMastek%20">
+                                <img src="{% static 'NHSD_POC/images/CWT/icon-linkedin.png' %}"
                                     style="width: 1em; height: 1em; margin-top: -1px;">
                                 LinkedIn
                             </a>
 
                        </li>
                             <li>
-                                <a href="https://www.twitter.com/NHSDigital">
-                                    <img src="{% static 'NHSD_POC/images/CWT/icon-linkedin.png' %}"
+                                <a href="https://twitter.com/MastekUK">
+                                    <img src="{% static 'NHSD_POC/images/CWT/icon-twitter.png' %}"
                                         style="width: 1em; height: 1em; margin-top: -1px;">
                                     Twitter
                                 </a>
                             </li>
 
-                        <li><a href="https://digital.nhs.uk/about-nhs-digital/accessibility-help"
+                        <li><a href="#"
                                 accesskey="0">Accessibility</a></li>
-                        <li><a href="https://digital.nhs.uk/about-nhs-digital/contact-us/freedom-of-information">Freedom
+                        <li><a href="#">Freedom
                                 of Information</a></li>
-                        <li><a href="https://digital.nhs.uk/hidden-articles/our-use-of-cookies">Privacy and cookies</a>
+                        <li><a href="#">Privacy and cookies</a>
                         </li>
-                        <li><a href="https://digital.nhs.uk/hidden-articles/footer/terms-and-conditions">Terms and
+                        <li><a href="#">Terms and
                                 Conditions</a></li>
-                        <li><a href="https://digital.nhs.uk/legal">Legal</a></li>
-                        <li><a href="http://digital.nhs.uk/contact-us">Contact Us</a></li>
+                        
+                        <li><a href="https://www.mastek.com/contact-us">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
