--- a/NHS.Ui/Web/NHSD_POC/templates/registration/login.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/registration/login.html
@@ -20,7 +20,7 @@
 					</span>
 					<span class="login100-form-avatars" st>
 						<!--<img src="{% static 'NHSD_POC/images/CWT/logo.png' %}" alt="AVATAR"> -->
-						 <h2 style="margin-left: 18%;">Exploratory analytics</h2>
+						 <h2 style="margin-left: 18%;">Exploratory Analytics</h2>
 					</span>
 
 					<div class="wrap-input100 validate-input m-t-30 m-b-35" data-validate = "Enter username">
