changes to refactor

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -170,19 +170,19 @@
                         <div id="side-bar-chart-option">
                             <center><strong>Other Graph </strong></center>
                         </div>
-                        <div id="chart1" class="dvGraphIcon" onclick="showchart(grapType.TvR, this.id )" style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
+                        <div id="dvSidePanelTvR" class="dvGraphIcon" onclick="showchart(grapType.TvR, this.id )" style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
                             <a style="cursor: pointer" >
                                 <img src="{% static 'NHSD_POC/images/trustvsregion.png' %}" style="width: 100%">
                                 <span style="display: block">Trust vs Region </span>
                             </a>
                         </div>
-                        <div id="chart2" class="dvGraphIcon" onclick="showchart(grapType.TvP, this.id )" style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding: 5px;text-align: center;height: 120px;">
+                        <div id="dvSidePanelTvP" class="dvGraphIcon" onclick="showchart(grapType.TvP, this.id )" style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding: 5px;text-align: center;height: 120px;">
                             <a style="cursor: pointer" >
                                 <img src="{% static 'NHSD_POC/images/regions.png' %}" style="width: 100%">
                                 <span style="display: block">Trust vs Peers</span>
                             </a>
                         </div>
-                        <div id="chart3" class="dvGraphIcon" onclick="showchart(grapType.Regions, this.id )" style="margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
+                        <div id="dvSidePanelRegions" class="dvGraphIcon" onclick="showchart(grapType.Regions, this.id )" style="margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
                             <a style="cursor: pointer" >
                                 <img src="{% static 'NHSD_POC/images/trustwise.png' %}" style="width: 100%">
                                 <span style="display: block">Regions</span>
