--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -91,20 +91,15 @@
                             <div id="loaderc" style="display: block;position: absolute;top: 0;z-index: 2;background-color: black">
                             </div>
                         </div>
-<<<<<<< HEAD
-                        <div id="region_nd_other" style="margin-top: -107px;">
-                                
-=======
-                        <div id="region_nd_other" style="display: none">
+
+                        <div id="region_nd_other" style="display: none; margin-top: -107px;">
                                 <h4 style="margin-left: 111px;"><i><b>Region <span id="region_display"></span> and Others</b></i></h4>  
->>>>>>> 7ed082847bc3b211e44e5b22deda4cbe355ac593
                         </div>          
                         <div class="HomePageMenuList">
                             <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
                             </div>
                         </div>
                         <div style="margin-left:10%;font-size: 18px;">
-<<<<<<< HEAD
                             <table id="t01" style="font-size: 12px;">
                                 <tr>
                                     <td><strong>W1:</strong> Waiting Time CANCER REFERRAL To TREATMENT(E1) to First Seen (E2)</td>
@@ -115,12 +110,6 @@
                                     <td><strong>W4:</strong> Waiting Time CANCER TREATMENT PERIOD START DATE (E4) To TREATMENT START DATE 'CANCER' (E5)</td>
                                 </tr>
                             </table>
-=======
-                                 <b>E1: </b><em>Transition 1</em>, 
-                                 <b>E2: </b><em>Transition 2</em>,
-                                 <b>E3: </b><em>Transition 3</em>,
-                                 <b>E4: </b><em>Transition 4</em>
->>>>>>> 7ed082847bc3b211e44e5b22deda4cbe355ac593
                         </div>
                     </div>
                     <div class="col-sm-2 other_graph" style="border-left: 1px solid black;">
