graph-title-as-per-region-trust

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -93,13 +93,13 @@
                         </div>
 
                         <div id="region_nd_other" style="display: none; margin-top: -107px;">
-                                <h4 style="margin-left: 111px;"><i><b>Region <span id="region_display"></span> and Others</b></i></h4>  
+                                <h4 style="margin-left: 111px;"><i><b> <span id="region_display"></span></b></i></h4>  
                         </div>          
                         <div class="HomePageMenuList">
                             <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
                             </div>
                         </div>
-                        <div style="margin-left:10%;margin-top: -14px;">
+                        <div style="margin-left:10%;margin-top: -14px;display: none" id="waiting_time_div">
                             <table id="t01" style="font-size: 10px;">
                                 <tr>
                                     <td><strong>W1:</strong> Waiting Time CANCER REFERRAL To TREATMENT(E1) to First Seen (E2)</td>
