add static text for automation test

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -91,10 +91,14 @@
                             <div id="loaderc" style="display: block;position: absolute;top: 0;z-index: 2;background-color: black">
                             </div>
                         </div>
-
-                        <div id="region_nd_other" style="display: none; margin-top: -107px;">
+                        <!-- start test case for automation-->
+                        <span id="region_display_auto">Derived waiting time of trust AUT with its underlying region R1</span> <input value="Toggle trust" type="button" onclick="myFunctionSpan()">
+                        <div id="region_display_auto_div">Derived waiting time of trust AUT </div><input value="Toggle Region" type="button" onclick="myFunctionDiv()"> 
+                        <!-- end test case for automation-->
+                        <div id="region_nd_other" style="display: block; margin-top: -107px;">
                                 <h4 style="margin-left: 111px;"><i><b> <span id="region_display"></span></b></i></h4>  
-                        </div>          
+                        </div> 
+                                 
                         <div class="HomePageMenuList">
                             <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
                             </div>
